--- a/SageTVTranscoderWinx64.template
+++ b/SageTVTranscoderWinx64.template
@@ -13,7 +13,7 @@
 	<Webpage>https://github.com/jvl711/FFmpeg</Webpage>
 	<Package>
         <PackageType>System</PackageType>
-        <Location>https://github.com/jvl711/FFmpeg/releases/download/@ZIPFILENAME@</Location>
+        <Location>https://github.com/jvl711/FFmpeg/releases/download/SageTVTranscoder_v@VERSION@/@ZIPFILENAME@</Location>
         <MD5>@MD5@</MD5>
     </Package>
 	<ReleaseNotes><![CDATA[
