--- a/SageTVTranscoderWinx64.template
+++ b/SageTVTranscoderWinx64.template
@@ -19,6 +19,9 @@
 	<ReleaseNotes><![CDATA[
 	1.0.0 - Intial feature complete release
 	1.0.1 - Added build for windows 32 bit
+        1.0.2 - Fixed an issue with thumbnail generation on client machine. "stv://127.0.0.1/" translated to locally accessible path.
+        1.0.3 - Fixed an issue with livetv transcoding (ACTIVEFILE/INACTIVEFILE).  Not stoping transcode at end of recording.
+        1.0.4 - Added libx265 to the build
 	]]></ReleaseNotes>
 </SageTVPlugin>
 
